fix tab overflow

--- a/userChrome.css
+++ b/userChrome.css
@@ -86,17 +86,14 @@
 	}
 }
 
-#tabbrowser-arrowscrollbox {
-	min-width: 100vw !important;
-}
-
 #tabs-newtab-button {
 	opacity: 0;
 	transition: 0.2s opacity ease;
 }
 
-#tabbrowser-tabs {
-	padding-left: var(--fc-tabbar-padding) !important;
+.titlebar-spacer[type="pre-tabs"],
+.titlebar-spacer[type="post-tabs"] {
+	width: var(--fc-tabbar-padding) !important;
 }
 
 .tab-background {
@@ -111,8 +108,11 @@
 	opacity: 0;
 }
 
+#tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs])>#tabbrowser-arrowscrollbox>.tabbrowser-tab:nth-child(1 of :not([pinned], [hidden])) {
+	margin-inline-start: 0px !important;
+}
+
 .tabbrowser-tab {
-	margin-inline-start: 0 !important;
 	transition: min-width 0.2s ease, max-width 0.2s ease !important;
 
 	&[fadein]:not([pinned]) {
